<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollMovie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.movie.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shimmer_duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <include layout="@layout/shimmer_banner"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/popular_movies"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:orientation="vertical">

                    <include layout="@layout/shimmer_item_grid"/>
                    <include layout="@layout/shimmer_item_grid"/>
                    <include layout="@layout/shimmer_item_grid"/>
                    <include layout="@layout/shimmer_item_grid"/>
                </LinearLayout>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_movie_banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/dotsIndicator_banner_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            app:dotsCornerRadius="8dp"
            app:dotsSize="6dp"
            app:dotsSpacing="4dp"
            app:dotsStrokeColor="@color/colorAccent"
            app:dotsStrokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/vp_movie_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/popular_movies_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/popular_movies"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dotsIndicator_banner_movie"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:layout_marginTop="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            app:layout_constraintTop_toBottomOf="@id/popular_movies_title"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_for_rv_grid"/>

        <LinearLayout
            android:id="@+id/error_notification"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:contentDescription="@string/image_for_data_not_found"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:src="@drawable/not_found"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_not_found"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>